fix: adjust font sizes for improved readability in featured projects section

--- a/src/app/main-content/featured-projects/featured-projects.component.scss
+++ b/src/app/main-content/featured-projects/featured-projects.component.scss
@@ -46,10 +46,9 @@
 
   h4 {
     color: rgba(255, 255, 255, 1);
-    font-size: 24px;
+    font-size: 32px;
     font-weight: 700;
     margin: 0;
-
   }
 }
 
@@ -65,6 +64,7 @@
 
   h4 {
     align-self: flex-end;
+    font-size: 32px !important;
     margin-top: 80px !important;
   }
 }
@@ -279,7 +279,7 @@
         cursor: pointer;
         margin: 0;
         color: rgba(255, 255, 255, 1);
-        font-size: 18px;
+        font-size: 16px;
       }
 
       span {
@@ -923,6 +923,10 @@
   .reversed {
     width: 100% !important;
 
+    p:first-child {
+      font-size: 20px !important;
+    }
+
     h4 {
       margin-top: 40px !important;
     }
@@ -1088,8 +1092,12 @@
   .reversed {
     gap: 16px;
 
+    p:first-child {
+      font-size: 18px !important;
+    }
+
     h4 {
-      font-size: 20px;
+      font-size: 24px;
       margin-top: 30px !important;
     }
   }
@@ -1216,9 +1224,12 @@
   }
 
   .reversed {
-    h4 {
-      font-size: 18px;
-      margin-top: 20px !important;
+    p:first-child {
+      font-size: 16px;
+    }
+
+    h3 {
+      font-size: 24px;
     }
   }
 
@@ -1272,7 +1283,7 @@
 
       p {
         padding: 12px;
-        font-size: 14px;
+        // font-size: 14px;
       }
     }
   }
